<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>NewlandProperty</artifactId>
        <groupId>com.newland.property</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>springboot</artifactId>

    <name>springboot</name>
    <!-- FIXME change it to the project's website -->
    <url>http://www.example.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <hc.version>1.0-SNAPSHOT</hc.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>property-boot</artifactId>
            <version>${hc.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>property-service</artifactId>
            <version>${hc.version}</version>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-community</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-common</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-dev</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-fee</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-job</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-oa</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-tcp</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-acct</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-report</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-store</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-user</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-order</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.newland.property</groupId>
            <artifactId>service-scm</artifactId>
            <version>${hc.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>property-service</artifactId>
                    <groupId>com.newland.property</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.quartz-scheduler</groupId>-->
<!--            <artifactId>quartz</artifactId>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>


    </dependencies>



    <build>
        <finalName>MicroCommunityBoot</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.newland.property</groupId>
                                    <artifactId>property-interface</artifactId>
                                    <version>${microcommunity.version}</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.newland.property.boot.BootApplicationStart</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <configuration>
                    <aggregate>true</aggregate>
                    <reportOutputDirectory>../javadocs</reportOutputDirectory>
                    <destDir>security-javadoc</destDir>
                    <javadocExecutable>${java.home}bin/javadoc</javadocExecutable>
                    <tags>
                        <tag>
                            <name>Description</name>
                            <placement>a</placement>
                            <head>功能描述:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>

<!--            <plugin>-->
<!--                <groupId>com.google.cloud.tools</groupId>-->
<!--                <artifactId>jib-maven-plugin</artifactId>-->
<!--                <version>2.7.0</version>-->
<!--                <configuration>-->
<!--                    <from>-->
<!--                        &lt;!&ndash;基础镜像&ndash;&gt;-->
<!--                        <image>openjdk:alpine</image>-->
<!--                    </from>-->
<!--                    <to>-->
<!--                        &lt;!&ndash;目标镜像registry地址&ndash;&gt;-->
<!--                        <image>swr.cn-south-1.myhuaweicloud.com/newland-property/property-community</image>-->
<!--                        <tags>-->
<!--                            &lt;!&ndash;镜像版本&ndash;&gt;-->
<!--                            <tag>v1.0.0</tag>-->
<!--                        </tags>-->
<!--                        <auth>-->
<!--                            &lt;!&ndash;用户名密码&ndash;&gt;-->
<!--                            <username>cn-south-1@ZOIJHOG7AU6VPSURFOHQ</username>-->
<!--                            <password>9878e8c28684a932b77767972036cc748ebe8e1201acb468acf5e432b1e07023</password>-->
<!--                        </auth>-->
<!--                    </to>-->
<!--                    <container>-->
<!--                        &lt;!&ndash; 在容器中创建日志目录 &ndash;&gt;-->
<!--                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>-->
<!--                        <appRoot>/app</appRoot>-->
<!--                        <mainClass>com.newland.property.boot.BootApplicationStart</mainClass>-->
<!--                        <jvmFlags>-->
<!--                            <jvmFlag>-Xms2g</jvmFlag>-->
<!--                            <jvmFlag>-Xmx2g</jvmFlag>-->
<!--                            <jvmFlag>-XX:+PrintGCCause</jvmFlag>-->
<!--                            <jvmFlag>-XX:+UseGCLogFileRotation</jvmFlag>-->
<!--                            <jvmFlag>-XX:NumberOfGCLogFiles=5</jvmFlag>-->
<!--                            <jvmFlag>-XX:GCLogFileSize=20M</jvmFlag>-->
<!--                            <jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>-->
<!--                            <jvmFlag>-XX:HeapDumpPath=/tmp/logs/heapdump.hprof</jvmFlag>-->
<!--                            <jvmFlag>-Xloggc:/tmp/logs/heap-gc-%t.log</jvmFlag>-->
<!--                            <jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>-->
<!--                            <jvmFlag>-XX:+PrintGCDetails</jvmFlag>-->
<!--                        </jvmFlags>-->
<!--                    </container>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>build</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>

    </build>
</project>
